--- a/level-2/step-1/step-1.css
+++ b/level-2/step-1/step-1.css
@@ -15,12 +15,17 @@
 /*  Step-1 You need to get all of these elements to line up side by side. What display property would do this for you? */
 
 .menu {
+    display: inline-block;
+    position: fixed;
+    top: 10px;
+    left: 15px;
     width: 100px;
     height: 40px;
     background: #536A63;
 }
 
 .logo {
+    display: inline-block;
     width: 300px;
     height: 40px;
     margin-top: 10px;
@@ -28,6 +33,10 @@
 }
 
 .sign-in {
+    display: inline-block;
+    position: fixed;
+    top: 10px;
+    right: 15px;
     width: 100px;
     height: 40px;
     background: #536A63;
@@ -40,4 +49,6 @@
     height: 60px;
     left: 22%;
     background: #536A63;
+    position: relative;
+    bottom: -275px;
 }
