--- a/level-2/step-2/step-2.css
+++ b/level-2/step-2/step-2.css
@@ -1,11 +1,15 @@
 /* Step-2 add a text-align that will align items in the center.  */
 .main-bottom-section {
   margin-top: 65px;
+  text-align: center;
   /* alignment property */
 }
 
 /* Step-2 Add a width, height and display property to make these containers look like the design. */
 .item {
+    width: 500px;
+    height: 200px;
+    display: inline-block;
    /*width*/
     /*height*/
     /*display*/
@@ -16,6 +20,9 @@
 
 /* Step-2 Add a width, height, and margin property to make these containers look like the design. Remember margin: auto is helpful when trying to center a container. */
 .full-width-item {
+    width: 1043px;
+    height: 150px;
+    margin: auto;
     /*width*/
     /*height*/
     /*margin*/
@@ -25,6 +32,11 @@
 
 /* Step-2 Add a width, height, and margin property to make these containers look like the design. Remember margin: auto is helpful when trying to center a container. */
 .large-item {
+    width: 1043px;
+    height: 400px;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
     /*width*/
     /*height*/
     /*margin*/
