--- a/level-3/step-1/step-1.css
+++ b/level-3/step-1/step-1.css
@@ -4,6 +4,7 @@
     width: 100%;
     height: 200px;
     position: relative;
+    background-color: #F2EFE5;
 }
 
 
@@ -23,12 +24,11 @@
     position: absolute;
     left: 10px;
     top: 20px;
-
 }
 
 .menu-icon {
     width: 60%;
-
+    
 }
 
 .logo {
@@ -36,7 +36,7 @@
     height: 40px;
     display: inline-block;
     margin-top: 10px;
-
+    
 }
 
 .logo-icon {
